SERVER-33942 Avoid setting deadline for maxTimeMS on tailable cursors